2000-05-09  Matt Loper  <matt@helixcode.com>

	* e-shell-view-menu.c (command_run_bugbuddy): New function; allows
	users to submit a bug.
	(command_run_bugbuddy): Implemented with jacob's patch.

2000-05-09  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell.c (e_shell_new_view): Display the specified @uri in the
	view.

	* e-shell-view.c (e_shell_view_construct): Removed arg @uri.
	(e_shell_view_new): Likewise.

	* main.c: New string constant `STARTUP_URI', specifying the URI to
	show in the startup view.
	(new_view_idle_cb): New callback function to create a new view for
	`STARTUP_URI' in the idle loop.  We need to do this in the idle
	loop because the CORBA stuff cannot work until the loop starts
	running.
	(main): Set `new_view_idle_cb' up as the idle callback instead of
	creating the view right away.

2000-05-09  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell.c (setup_storages): Woops.  Don't free the path before
	the warning message, as we need to print it.

2000-05-08  Ettore Perazzoli  <ettore@helixcode.com>

	* main.c (destroy_cb): New function.
	(main): Connect it to the `destroy' signal on the shell.

2000-05-08  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shortcuts.c (load_shortcuts): Const fix.

2000-05-08  Larry Ewing  <lewing@helixcode.com>

	* e-shortcuts.c (load_shortcuts_into_view): xmlFree the return
	value of xmlGetProp.

2000-05-07  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shortcuts-view.c (e_shortcuts_view_construct): Use
	correct cast.

2000-05-07  Ettore Perazzoli  <ettore@helixcode.com>

	* main.c (main): Connect to "no_views_left", not "destroy".

	* e-shell.c (view_destroy_cb): Grmpf.

2000-05-07  Ettore Perazzoli  <ettore@helixcode.com>

	* e-shell.c (e_shell_construct): Output a warning message if the
	shortcut file is not found.
	(setup_storages): Output a warning message if the local storage
	cannot be initialized.
	(destroy): Destroy all the views.

	* e-shell-view.c
	(e_shell_view_construct): Ref the shell.
