@@ -1,3 +1,10 @@
+2000-05-10  Christopher James Lahey  <clahey@helixcode.com>
+
+	* e-shell-view.c: Set the icons when changing between components.
+
+	* main.c: Set the default icon.  (The change in e-shell-view.c
+	doesn't work unless we do this.)
+
 2000-05-09  Matt Loper  <matt@helixcode.com>
 
 	* e-shell-view-menu.c (command_run_bugbuddy): New function; allows
